--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "androidx.concurrent:concurrent-futures:1.0.0"
     implementation "androidx.concurrent:concurrent-futures-ktx:1.1.0-alpha01"
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
