--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -60,7 +68,7 @@ dependencies {
     implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
 
     // Navigation
-    def nav_version = "2.3.0-beta01"
+    def nav_version = "2.2.2"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
