--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "io.dailyunix"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 7
-        versionName "7.0"
+        versionCode 8
+        versionName "8.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -75,6 +75,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     // implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     // androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // View pager for swiping between tabs
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     // GSON
     implementation 'com.google.code.gson:gson:2.8.5'
