--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "io.dailyunix"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 9
-        versionName "9.0"
+        versionCode 10
+        versionName "0.1.10"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -75,6 +75,11 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     // implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     // androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // ViewModel and LiveData
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // View pager for swiping between tabs
     implementation "androidx.viewpager2:viewpager2:1.0.0"
