--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,14 +61,14 @@ dependencies {
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "androidx.concurrent:concurrent-futures:1.0.0"
-    implementation "androidx.concurrent:concurrent-futures-ktx:1.1.0-alpha01"
+    implementation "androidx.concurrent:concurrent-futures-ktx:1.1.0-beta01"
 
     // Recycler view for lists
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.0'
 
     // Navigation
-    def nav_version = "2.2.2"
+    def nav_version = "2.3.0"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
